Removed Jackson's dependencies, other minor updates.